--- a/productos/producto1.html
+++ b/productos/producto1.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Producto1</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae enim consequuntur veritatis laudantium distinctio eius ipsum.</p>
+    <img src="https://picsum.photos/500/300" alt="Lorem Picsum"><br>
     <a href="../index.html">Ir a Index</a><br>
     <a href="../servicios.html">Ir a Servicios</a><br>
     <a href="producto2.html">Ir a Producto2</a><br>
