--- a/productos/producto2.html
+++ b/productos/producto2.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Producto2</h1>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae enim consequuntur veritatis laudantium distinctio eius ipsum.</p>
+    <img width="500" src="../img/photo.avif" alt="Lorem Picsum"><br>
     <a href="../index.html">Ir a Index</a><br>
     <a href="../servicios.html">Ir a Servicios</a><br>
     <a href="producto1.html">Ir a Producto1</a><br>
